# personal-rag-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  data.db  pyproject.toml
.github/workflows/: ci.yml
config/: system_prompt.txt
data/: test_report.txt
frontend/: index.html
scripts/: evaluate.py
src/personal_rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_assistant/: api.py  cli.py  constants.py  pipeline.py
src/rag_assistant/ingestion/: chunker.py  loader.py
src/rag_assistant/retrieval/: embedder.py
tests/: test_chunker.py  test_cli.py  test_embedder.py  test_loader.py  test_pipeline.py
