[project]
name = "personal-rag-assistant"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.2",
    "google-genai>=2.10.0",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_assistant"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
